Fix layout issue for scolling content

--- a/src/layouts/SiderLayout.less
+++ b/src/layouts/SiderLayout.less
@@ -1,9 +1,9 @@
 .layout {
   min-width: 1200px;
-  height: 100%;
+  min-height: 100%;
 }
 
 .content {
   padding: 10px 50px 0;
-  height: calc(100% - 100px);
+  min-height: calc(100% - 100px);
 }
